--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,43 +16,59 @@ a {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(180deg, #EBF3FE 0%, #C1D5EC 35%, #BDD3EB 100%), url('/grain.gif');
+  background: linear-gradient(180deg, #EBF3FE 0%, #C1D5EC 35%, #BDD3EB 100%);
   background-repeat: no-repeat, repeat;
   background-size: cover, 220px;
   background-attachment: fixed;
-  font-family: 'Space Grotesk', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Poppins', 'Helvetica Neue', Arial, sans-serif;
   font-size: var(--body-font-size, 1rem);
 }
 
-.btn {
-  padding: 10px 16px;
-  border-radius: 6px;
-  border: none;
-  cursor: pointer;
-  font-size: 25px;
 
-  box-shadow: 0 4px 10px #85AACE33;
+.page {
+  background: transparent;
+  min-height: 100vh;
+  padding: 20px;
 }
 
-.btn-primary {
-  background-color: linear-gradient(0deg, #88C7FD 0%, #266EBA 100%);
-  color: white;
+.upload-page,
+.processing-page,
+.results-page,
+.home-page {
+  background: transparent;
 }
 
-.btn:hover {
-  box-shadow: 0 6px 10px #85AACE33;
+.subtitle-text {
+  font-family: Poppins, Arial, sans-serif;
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: #266EBA;
+  margin-top: 0.5rem;
+  text-align: center;
 }
 
-.btn:active{
-  box-shadow: 0 2px 6px #85AACE33;
-  transform: translateY(1px);
+
+.gradient-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: clamp(28px, 5vw, 56px);
+  line-height: 1.1;
+  margin-top:8rem;
+  margin-bottom:2rem;
+
+  background: linear-gradient(
+    180deg,
+    #256FB8,
+    #266EBA,
+    #88C7FD
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  background-clip: text;
+  color: transparent;
 }
-
-
-
-
 
