--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,7 @@ body {
 .upload-page,
 .processing-page,
 .results-page,
-.home-page {
+.home-page, .about-page, .guide-page {
   background: transparent;
 }
 
@@ -70,5 +70,7 @@ body {
 
   background-clip: text;
   color: transparent;
+  
+  filter: drop-shadow(0 4px 4px #85AACEBB);
 }
 
