--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -1,15 +1,12 @@
 .btn {
-  padding: 12px 24px;
+  padding: 8px 18px;
   border-radius: 8px;
   border: none;
   cursor: pointer;
-  font-family: inherit;
-  font-size: 1.5rem;
+  font-family: Poppins, Arial, sans-serif;
+  font-size: 1rem;
   font-weight: 300;
   transition: all 0.3s ease;
-  box-shadow: 0 6px 20px rgba(133, 170, 206, 0.5);
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .btn-primary {
@@ -28,10 +25,8 @@
 
 .btn:hover {
   transform: translateY(-2px);
-  box-shadow: 0 10px 30px rgba(133, 170, 206, 0.7);
 }
 
 .btn:active{
-  box-shadow: 0 3px 10px rgba(133, 170, 206, 0.4);
   transform: translateY(1px);
 }
