--- a/frontend/src/components/HeroTitle/HeroTitle.css
+++ b/frontend/src/components/HeroTitle/HeroTitle.css
@@ -102,7 +102,7 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   
-  filter: drop-shadow(0 6px 12px #85AACE99);
+  filter: drop-shadow(0 6px 12px rgba(133, 170, 206, 0.2));
 }
 
 /* Smaller "the Deal!" */
@@ -120,5 +120,5 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   
-  filter: drop-shadow(0 6px 12px #85AACE99);
+  filter: drop-shadow(0 6px 12px rgba(133, 170, 206, 0.2));
 }
